--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">I Am Poor</string>
+    <string name="app_name">Poor Nigga</string>
+    <string name="title">I am Poor!</string>
+    <string name="blackcoal"> coal </string>
 </resources>
